--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!--
+    Coded by Olivia
+    Updated March 2023
+-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-ca">
 
 <head>
 
@@ -21,6 +27,8 @@
 
 <body>
 
+    <div class="cursor rounded"></div>
+    
     <div class="content-wrapper">
 
     <nav>
@@ -132,6 +140,7 @@
 
 </div> <!-- end of content wrapper-->
 
+<script src="script.js”></script>
 
 </body>
 
