adding home page/editing styleguide

--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -152,7 +152,7 @@
 
         </div>
 
-
+        <a href="../index.html">styleguide</a>
 
         <div class="box-footer">
             <div class="box-footer-project">
