--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -180,7 +180,7 @@
 
         </div>
 
-
+        <a href="../index.html">styleguide</a>
 
         <div class="box-footer">
             <div class="box-footer-project">
@@ -188,6 +188,7 @@
                 <p class="p1">©olivia steed 2023</p>
             </div>
         </div>
+
 
 
     </div> <!-- END OF CONTENT WRAPPER -->
