--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -28,9 +28,9 @@
 
         <header>
             <nav class="box-header">
-                <a href="index.html" class="site-title box-header box-header-title">olivia steed*</a>
+                <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
             </nav>
         </header>
 
@@ -152,7 +152,7 @@
 
         </div>
 
-        <a href="../index.html">styleguide</a>
+        <a href="../html/styleguide.html">styleguide</a>
 
         <div class="box-footer">
             <div class="box-footer-project">
