--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -36,7 +36,7 @@
             <nav class="box-header">
                 <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
             </nav>
         </header>
 
@@ -57,9 +57,7 @@
 
             <section class="styleguide-section-border"> <!-- goals/identity section -->
                 <h4>goals</h4>
-                <h5>creative</h5>
-                <h5>curious</h5>
-                <h5>multidisciplinary</h5>
+                <p> This portfolio is intended to reflect me as a visual designer, graphic designer and art director. It conveys this message by focusing on two mainly visual design-based projects and explaining my process as a graphic designer. The website design itself also reflects my aesthetic of structural design with hints of fun. </p>
             </section>
 
             <section class="styleguide-section-border"> <!-- type explanation section -->
