--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -28,9 +28,9 @@
 
         <header>
             <nav class="box-header">
-                <a href="index.html" class="site-title box-header box-header-title">olivia steed*</a>
+                <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
             </nav>
         </header>
 
@@ -117,7 +117,7 @@
                 <figure class="image-caption-box">
                     <img src="../img/identity1-2x.png" srcset="../img/identity1-1x.png 1x, ../img/identity1-2x.png 2x"
                         class="image" alt="screenshot of game level one in cartoon rendering of bedroom">
-                    <figcaption class="p1 image-caption">visual identity based on distorted tapestry imagery and
+                    <figcaption class="p1 image-caption">visual identity based on distorted imagery and
                         reversible
                         figure ground</figcaption>
                 </figure>
@@ -180,7 +180,7 @@
 
         </div>
 
-        <a href="../index.html">styleguide</a>
+        <a href="../html/styleguide.html">styleguide</a>
 
         <div class="box-footer">
             <div class="box-footer-project">
