--- a/index.html
+++ b/index.html
@@ -24,49 +24,68 @@
 
     <div class="cursor rounded"></div>
 
-    <div class="container">
+        <div class="container">
 
-        <header>
-            <nav class="box-header">
-                <a href="index.html" class="site-title box-header box-header-title">olivia steed*</a>
-                <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
-            </nav>
-        </header>
+            <div class="main-container">
+
+            <header>
+                <nav class="box-header">
+                    <a href="index.html" class="site-title box-header box-header-title">olivia steed*</a>
+                    <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
+                    <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                </nav>
+            </header>
 
 
-        <section> <!-- bio/introduction -->
-            <div class="section-container">
-                <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration and
-                    art direction. I’m currently in my third year of studies at SFU’s School of Interactive Arts and
-                    Technology.</h3>
-            </div>
-
-            <div class="box-header">
-                <div class="box-header-title">
-                    <h3>Projects</h3>
+            <section> <!-- bio/introduction -->
+                <div class="section-container">
+                    <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration
+                        and
+                        art direction. I’m currently in my third year of studies at SFU’s School of Interactive Arts and
+                        Technology concentrating in design.</h3>
                 </div>
 
-                <div class="box-footer">
-
-                    <div class="box-footer-project">
-                        <a href="html/between-dreams.html" class="box-header">between dreams and reality</a>
-                        <p class="p1">visual identity and microsite prototype</p>
+                <div class="box-header">
+                    <div class="box-header-title">
+                        <h3>Projects</h3>
                     </div>
 
-                    <div class="box-footer-project">
-                        <a href="html/artisticparrot.html" class="box-header">artisticparrot branding</a>
-                        <p class="p1">web and print brand identity</p>
-                    </div>
+                    <div class="box-footer">
 
+                        <div class="box-footer-project">
+                            <a href="html/between-dreams.html" class="box-header">between dreams and reality</a>
+                            <p class="p1">visual identity and microsite prototype</p>
+                        </div>
+
+                        <div class="box-footer-project">
+                            <a href="html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                            <p class="p1">web and print brand identity</p>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </section>
+
+        </div>
+
+        <footer>
+            <a href="html/styleguide.html">styleguide</a>
+
+            <div class="box-footer">
+                <div class="box-footer-project">
+                    <p>*artist, designer, maker of things</p>
+                    <p class="p1">©olivia steed 2023</p>
                 </div>
             </div>
 
+        </footer>
 
-        </section>
 
 
-    </div>
+
+    </div> <!-- END OF CONTENT WRAPPER -->
 
 </body>
 
