styleguide and footer edits

--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas display thin font from Adobe-->
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- swear black display ciati font from Adobe-->
 
-    <link rel="shortcut icon" href="img/star.png">
+    <link rel="shortcut icon" href="../img/star.png">
 
 </head>
 
@@ -30,11 +30,11 @@
             <nav class="box-header">
                 <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
             </nav>
         </header>
 
-        <section>
+        <section class="medium-margin-bottom">  <!-- PROJECT CONTENT -->
             <section> <!-- project introduction -->
                 <div class="section-container">
                     <h2>Between Dreams and Reality (2022)</h2>
@@ -159,35 +159,80 @@
 
 
 
-        <div class="box-header-title">
-            <a href="../html/between-dreams.html" class="box-header box-header-title padding-bottom padding-right">back
-                to top</a>
-            <a href="../index.html" class="box-header box-header-title padding-bottom padding-right">back home</a>
-        </div>
+        <footer>
+            <!-- back to top/back home links -->
+            <nav class="box-header">
+                <a href="../html/between-dreams.html" class="box-header small-margin-bottom padding-right">back to
+                    top</a>
+                <a href="../index.html" class="box-header small-margin-bottom">back home</a>
+            </nav>
 
-        <!-- footer -->
-        <div class="box-header">
-            <div class="box-header-title">
-                <h3>More Projects</h3>
-            </div>
-
-            <div class="box-footer">
-                <div class="box-footer-project">
-                    <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
-                    <p class="p1">web and print brand identity</p>
+            <!-- more projects -->
+            <div class="box-header footer-spacing">
+                <div class="box-header-title">
+                    <h3 class="padding-right">More Projects</h3>
                 </div>
+
+                <div class="box-footer">
+                    <div class="box-footer-project">
+                        <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                        <p class="p1">web and print brand identity</p>
+                    </div>
+                </div>
+
             </div>
 
-        </div>
-
-        <a href="../html/styleguide.html">styleguide</a>
-
-        <div class="box-footer">
-            <div class="box-footer-project">
+            <!-- copyright thing -->
+            <div class="box-footer-project medium-margin-bottom">
+                <a href="../html/styleguide.html">styleguide</a>
                 <p>*artist, designer, maker of things</p>
                 <p class="p1">©olivia steed 2023</p>
             </div>
-        </div>
+        </footer>
+
+
+
+
+       
+
+
+
+
+        <!-- <footer>
+            
+            <div class="box-header footer-spacing">
+                <div class="box-header-title">
+                    <h3>More Projects</h3>
+                </div>
+
+                <div class="box-footer">
+                    <div class="box-footer-project">
+                        <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                        <p class="p1">web and print brand identity</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="box-header footer-spacing">
+                <div class="box-header-title">
+                    <a href="../html/artisticparrot.html" class="box-header small-margin-bottom">back to top</a>
+                    <a href="../index.html" class="box-header medium-margin-bottom">back home</a>
+                    <a href="../html/styleguide.html" class="box-header" >styleguide</a>
+                </div>
+
+                <div class="box-footer">
+                    <div class="box-footer-project">
+                        <p>*artist, designer, maker of things</p>
+                        <p class="p1">©olivia steed 2023</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </footer> -->
+
 
 
 
