--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -36,47 +36,58 @@
             <nav class="box-header">
                 <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
             </nav>
         </header>
 
         <h2>Styleguide</h2>
 
-        <nav class="section-container">
-            <a href="#visual-identity" class="styleguide-link">visual identity</a>
-            <a href="#text-elements" class="styleguide-link">text elements</a>
-            <a href="#imagery-elements" class="styleguide-link">imagery elements</a>
-            <a href="#interactive elements" class="styleguide-link">interactive elements</a>
-            <a href="#combined elements" class="styleguide-link">combined elements</a>
-            <a href="#citations" class="styleguide-link">citations</a>
+        <nav>
+            <a href="#visual-identity" class="padding-right">visual identity</a><br>
+            <a href="#text-elements" class="padding-right">text elements</a><br>
+            <a href="#imagery-elements" class="padding-right">imagery elements</a><br>
+            <a href="#interactive elements" class="padding-right">interactive elements</a><br>
+            <a href="#combined elements" class="padding-right">combined elements</a><br>
+            <a href="#citations" class="padding-right">citations</a><br>
         </nav>
-
 
         <section id="visual-identity"> <!-- VISUAL IDENTITY SECTION -->
             <h3>Visual Identity</h3>
 
-            <section class="styleguide-section-border"> <!-- goals/identity section -->
-                <h4>goals</h4>
-                <p> This portfolio is intended to reflect me as a visual designer, graphic designer and art director. It conveys this message by focusing on two mainly visual design-based projects and explaining my process as a graphic designer. The website design itself also reflects my aesthetic of structural design with hints of fun. </p>
-            </section>
+            <div class="section-container">
+                <section class="styleguide-section-border"> <!-- goals/identity section -->
+                    <h4>goals</h4>
+                    <p> This portfolio is intended to reflect me as a visual designer, graphic designer and art
+                        director. It conveys this message by focusing on two mainly visual design-based projects and
+                        explaining my process as a graphic designer. The website design itself also reflects my
+                        aesthetic of structural design with hints of fun. </p>
+                </section>
 
-            <section class="styleguide-section-border"> <!-- type explanation section -->
-                <h4>type</h4>
-                <h3>Neue Haas Grotesk Text</h3>
-                <h1>Swear Display Black Cilati</h1>
-                <p>The site title is written in Swear Display Cilati, conveying a hint of a fun and creative identity. This contrasts with Neue Haas Grotssk's utilitarian legibility which allows the project descriptions to convey context without competing with project imagery.</p>
-            </section>
+                <section class="styleguide-section-border"> <!-- type explanation section -->
+                    <h4>type</h4>
+                    <h3>Neue Haas Grotesk Text</h3>
+                    <h1>Swear Display Black Cilati</h1>
+                    <p>The site title is written in Swear Display Cilati, conveying a hint of a fun and creative
+                        identity. This contrasts with Neue Haas Grotssk's utilitarian legibility which allows the
+                        project descriptions to convey context without competing with project imagery.</p>
+                </section>
+            </div>
+
 
             <section class="styleguide-section-border"> <!-- imagery explanation section -->
                 <h4>image</h4>
                 <div class="image-box">
                     <figure class="image-caption-box">
-                        <img src="../img/thankyou1-2x.jpg" srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou1-2x.jpg 2x"
+                        <img src="../img/thankyou1-2x.jpg"
+                            srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou1-2x.jpg 2x"
                             alt="thank you card with doodles of parrots, flowers and clouds">
                         <figcaption class="p1 image-caption">thank you card included with purchase</figcaption>
                     </figure>
                 </div>
-                <p>Project images are centered to contrast the left-justified text. Right-justified captions are used to balance the visual weight of text and images.</p>
+                <div class="section-container">
+                    <p>Project images are centered to contrast the left-justified text. Right-justified captions are
+                        used to balance the visual weight of text and images.</p>
+                </div>
             </section>
 
             <section class="styleguide-section-border"> <!-- colour explanation section -->
@@ -84,10 +95,15 @@
                 <div class="image-box">
                     <figure class="image-caption-box">
                         <img src="../img/colours-2x.png" srcset="../img/colours-1x.png 1x, ../img/colours-2x.png 2x"
-                        alt="Lime green, red-orange and black site colours">
+                            alt="Lime green, red-orange and black site colours">
                     </figure>
                 </div>
-                <p>Site colours are neon green, red-orange and offwhite. The bright colours convey a fun atmosphere without being overpowering, with red indicating interactability when links are hovered and green used subtlely as the highlight colour. The site background is offwhite to create a softer viewing experience and make the project imagery come to the forefront.</p>
+                <div class="section-container">
+                    <p>Site colours are neon green, red-orange and offwhite. The bright colours convey a fun atmosphere
+                        without being overpowering, with red indicating interactability when links are hovered and green
+                        used subtlely as the highlight colour. The site background is offwhite to create a softer
+                        viewing experience and make the project imagery come to the forefront.</p>
+                </div>
             </section>
 
         </section> <!-- END OF VISUAL IDENTITY SECTION -->
@@ -185,7 +201,8 @@
                 <h5>rendered element</h5>
                 <div class="image-box">
                     <figure class="image-caption-box">
-                        <img src="../img/thankyou1-2x.jpg" srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou1-2x.jpg 2x"
+                        <img src="../img/thankyou1-2x.jpg"
+                            srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou1-2x.jpg 2x"
                             alt="thank you card with doodles of parrots, flowers and clouds">
                     </figure>
                 </div>
@@ -244,8 +261,6 @@
 
         </section> <!-- END OF INTERACTIVE ELEMENTS SECTION -->
 
-
-
         <section id="combined-elements"> <!-- COMBINED ELEMENTS SECTION -->
             <h3>combined elements</h3>
 
@@ -267,7 +282,8 @@
                 <nav class="box-header">
                     <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
                     <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                    <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                    <a href="../media/oliviasteed_resume.pdf"
+                        class="box-header box-header-link padding-right">resume</a>
                 </nav>
 
             </section>
@@ -279,34 +295,43 @@
 
                 <h5>code</h5>
                 <code>
-                    &lt;nav class="box-header"&gt;<br>
+                    &lt;div class="box-header footer-spacing"&gt; <br>
                     &lt;div class="box-header-title"&gt;<br>
-                    &lt;h3>More Projects&lt;/h3&gt;<br>
+                    &lt;h3 class="padding-right"&gt;Projects&lt;/h3&gt;<br>
                             &lt;/div&gt;<br>
+    
                             &lt;div class="box-footer"&gt;<br>
                             &lt;div class="box-footer-project"&gt;<br>
-                            &lt;a href="html/between-dreams-and-reality.html" class="box-header"&gt;between dreams and
-                                    reality&lt;/a&gt;<br>
-                                    &lt;p class="p1"&gt;visual identity and microsite prototype&lt;/p&gt;<br>
+                                &lt;a href="../html/between-dreams.html" class="box-header"&gt;between dreams and reality&lt;/a&gt;<br>
+                                &lt;p class="p1"&gt;visual identity and microsite prototype&lt;/p&gt;<br>
                                     &lt;/div&gt;<br>
-                                    &lt;/div&gt;<br>
-                                    &lt;/nav&gt;<br>
+    
+                            &lt;div class="box-footer-project"&gt;<br>
+                                &lt;a href="../html/artisticparrot.html" class="box-header"&gt;artisticparrot branding&lt;/a&gt;<br>
+                                &lt;p class="p1"&gt;web and print brand identity&lt;/p&gt;<br>
+                                &lt;/div&gt;<br>
+                                &lt;/div&gt;<br>
+                                &lt;div&gt;<br>
                 </code>
 
                 <h5>rendered element</h5>
-                <nav class="box-header">
+                <div class="box-header footer-spacing">
                     <div class="box-header-title">
-                        <h3>More Projects</h3>
+                        <h3 class="padding-right">Projects</h3>
                     </div>
 
                     <div class="box-footer">
                         <div class="box-footer-project">
-                            <a href="../html/between-dreams-and-reality.html" class="box-header">between dreams and
-                                reality</a>
+                            <a href="../html/between-dreams.html" class="box-header">between dreams and reality</a>
                             <p class="p1">visual identity and microsite prototype</p>
                         </div>
+
+                        <div class="box-footer-project">
+                            <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                            <p class="p1">web and print brand identity</p>
+                        </div>
                     </div>
-                </nav>
+                </div>
 
             </section>
 
@@ -357,7 +382,8 @@
                 <h5>rendered element</h5>
                 <div class="image-box">
                     <figure class="image-caption-box">
-                        <img src="../img/thankyou1-2x.jpg" srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou1-2x.jpg 2x"
+                        <img src="../img/thankyou1-2x.jpg"
+                            srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou1-2x.jpg 2x"
                             alt="thank you card with doodles of parrots, flowers and clouds">
                         <figcaption class="p1 image-caption">thank you card included with purchase</figcaption>
                     </figure>
@@ -400,34 +426,40 @@
         </section> <!-- END OF COMBINED ELEMENTS SECTION -->
 
 
-        <footer> <!-- footer -->
+        <footer>
 
-            <a href="../html/styleguide.html">back to top</a>
+            <!-- back to top/back home links -->
+            <nav class="box-header">
+                <a href="../html/styleguide.html" class="box-header small-margin-bottom padding-right">back to
+                    top</a>
+                <a href="../index.html" class="box-header small-margin-bottom">back home</a>
+            </nav>
 
-            <div class="box-header">
+            <!-- more projects -->
+            <div class="box-header footer-spacing">
                 <div class="box-header-title">
-                    <h3>Projects</h3>
+                    <h3 class="padding-right">Projects</h3>
                 </div>
 
                 <div class="box-footer">
-
-                    <div class="box-footer-project">
-                        <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
-                        <p class="p1">web and print brand identity</p>
-                    </div>
-
-
                     <div class="box-footer-project">
                         <a href="../html/between-dreams.html" class="box-header">between dreams and reality</a>
                         <p class="p1">visual identity and microsite prototype</p>
                     </div>
 
+                    <div class="box-footer-project">
+                        <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                        <p class="p1">web and print brand identity</p>
+                    </div>
                 </div>
+
             </div>
 
-
-            <p>*artist, designer, maker of things</p>
-            <p class="p1">©olivia steed 2023</p>
+            <!-- copyright thing -->
+            <div class="box-footer-project medium-margin-bottom">
+                <p>*artist, designer, maker of things</p>
+                <p class="p1">©olivia steed 2023</p>
+            </div>
 
         </footer>
 
