--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
     <div class="cursor rounded"></div>
 
-        <div class="container">
+    <div class="container">
 
-            <div class="main-container">
+        <div class="main-container">
 
             <header>
                 <nav class="box-header">
                     <a href="index.html" class="site-title box-header box-header-title">olivia steed*</a>
                     <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                    <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right">resume</a>
+                    <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
                 </nav>
             </header>
 
@@ -41,17 +41,20 @@
                 <div class="section-container">
                     <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration
                         and
-                        art direction. I’m currently in my third year of studies at SFU’s School of Interactive Arts and
-                        Technology concentrating in design.</h3>
+                        art direction. I’m currently in my third year of studies at SFU’s <em>School of Interactive Arts
+                            and
+                            Technology</em> concentrating in design.</h3>
                 </div>
 
-                <div class="box-header">
+
+
+                <!-- more projects -->
+                <div class="box-header footer-spacing">
                     <div class="box-header-title">
-                        <h3>Projects</h3>
+                        <h3 class="padding-right">Projects</h3>
                     </div>
 
                     <div class="box-footer">
-
                         <div class="box-footer-project">
                             <a href="html/between-dreams.html" class="box-header">between dreams and reality</a>
                             <p class="p1">visual identity and microsite prototype</p>
@@ -61,9 +64,10 @@
                             <a href="html/artisticparrot.html" class="box-header">artisticparrot branding</a>
                             <p class="p1">web and print brand identity</p>
                         </div>
-
                     </div>
+
                 </div>
+
 
 
             </section>
@@ -71,14 +75,14 @@
         </div>
 
         <footer>
-            <a href="html/styleguide.html">styleguide</a>
 
-            <div class="box-footer">
-                <div class="box-footer-project">
-                    <p>*artist, designer, maker of things</p>
-                    <p class="p1">©olivia steed 2023</p>
-                </div>
+            <!-- copyright thing -->
+            <div class="box-footer-project medium-margin-bottom">
+                <a href="html/styleguide.html">styleguide</a>
+                <p>*artist, designer, maker of things</p>
+                <p class="p1">©olivia steed 2023</p>
             </div>
+
 
         </footer>
 
