--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -34,7 +34,7 @@
             </nav>
         </header>
 
-        <section class="medium-margin-bottom">  <!-- PROJECT CONTENT -->
+        <section class="medium-margin-bottom"> <!-- PROJECT CONTENT -->
             <section> <!-- project introduction -->
                 <div class="section-container">
                     <h2>Between Dreams and Reality (2022)</h2>
@@ -44,16 +44,12 @@
                 </div>
 
                 <div class="image-box">
-                    <figure class="video-box">
-                        <div class="iframe-container">
-                            <iframe height=200% src="https://www.youtube.com/embed/tfMshlMB3Gk"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen></iframe>
-                        </div>
-                        <figcaption class="p1 image-caption">video walkthrough of full microsite experience</figcaption>
+                    <figure class="image-caption-box">
+                        <img src="../img/beginning.gif" alt="video of site entry with stretched type">
+                        <figcaption class="p1 image-caption">scroll down site entry</figcaption>
                     </figure>
                 </div>
+
             </section>
 
             <div class="section-container">
@@ -68,7 +64,37 @@
                         close-ups of
                         tapestry details, encouraging viewers to visit the exhibition to see the works in full.</p>
                 </section>
+            </div>
 
+            <div class="image-box">
+                <figure class="image-caption-box">
+                    <img src="../img/entry.gif" alt="video of clicking tapestry tab to view details">
+                    <figcaption class="p1 image-caption">viewing tapestry details</figcaption>
+                </figure>
+
+                <figure class="image-caption-box">
+                    <img src="../img/video-hover.gif" alt="video of tapestry process video shown on hover">
+                </figure>
+
+
+                <figure class="image-caption-box">
+                    <img src="../img/ending.gif" alt="video of yarn type highlighting">
+                    <figcaption class="p1 image-caption">tapestry process videos shown on hover</figcaption>
+                </figure>
+
+                <figure class="image-caption-box">
+                    <img src="../img/yarns.gif" alt="video of yarn type highlighting">
+                    <figcaption class="p1 image-caption">yarn type highlighting</figcaption>
+                </figure>
+
+                <figure class="image-caption-box">
+                    <img src="../img/close.gif" alt="video of closing tab at end of experience">
+                    <figcaption class="p1 image-caption">closing tab at end of experience</figcaption>
+                </figure>
+
+            </div>
+
+            <div class="section-container">
                 <section> <!-- project process -->
                     <h4>process</h4>
                     <p>The project began by studying the work of precedent designers to extract guiding design qualities
@@ -144,11 +170,31 @@
                         with the intention to learn as much as I can from outside sources to continually improve my
                         design
                         practice.</p>
-
-                    <a
-                        href="https://www.figma.com/proto/cR5vjeqeJzYmsLBqbfGvhN/UGC-SLIDES?node-id=1%3A234&page-id=0%3A1&scaling=contain&viewport=2386%2C586%2C0.03">view
-                        final presentation slides</a>
                 </section>
+            </div>
+
+            <div class="image-box">
+                <figure class="video-box">
+                    <div class="iframe-container">
+                        <iframe height=200% src="https://www.youtube.com/embed/tfMshlMB3Gk" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <figcaption class="p1 image-caption">video walkthrough of full microsite experience</figcaption>
+                </figure>
+            </div>
+
+
+            <div class="section-container">
+                <a
+                    href="https://www.figma.com/proto/cR5vjeqeJzYmsLBqbfGvhN/UGC-SLIDES?node-id=1%3A234&page-id=0%3A1&scaling=contain&viewport=2386%2C586%2C0.03">view
+                    final presentation slides</a>
+
+                <p class="p1">The project was presented as a final slide deck including a detailed walkthrough and
+                    process
+                    explanation.</p>
+
             </div>
 
 
@@ -193,7 +239,7 @@
 
 
 
-       
+
 
 
 
